Machine-Learning-Foundation-Nanodegree/Data-Analysis-Case-2/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Data-Analysis-Case-2
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=1cf3db4be08cf73d71a7cb38632cc41b90ee63d6f54ae4e8
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=1cf3db4be08cf73d71a7cb38632cc41b90ee63d6f54ae4e8
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook assessing.ipynb is not trusted
[NotebookApp | INFO] Kernel started: f9b3b38b-e432-43f5-b10b-923fe46068d6
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel f9b3b38b-e432-43f5-b10b-923fe46068d6
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Saving file at /assessing.ipynb
[NotebookApp | INFO] Starting buffering for f9b3b38b-e432-43f5-b10b-923fe46068d6:d83897b7ea5142fa922bd21318ab6916
[NotebookApp | WARNING] Notebook cleaning_column_labels.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 3da30997-9995-4916-adf8-4169ecf223d2
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 3da30997-9995-4916-adf8-4169ecf223d2
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Saving file at /cleaning_column_labels.ipynb
[NotebookApp | INFO] Starting buffering for 3da30997-9995-4916-adf8-4169ecf223d2:37d41492cf6d40fa84d3696b2274e3c0
[NotebookApp | WARNING] Notebook filter_drop_dedupe.ipynb is not trusted
[NotebookApp | INFO] Kernel started: ac828d00-bc9a-4c99-a711-f12374e12fbd
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel ac828d00-bc9a-4c99-a711-f12374e12fbd
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Starting buffering for ac828d00-bc9a-4c99-a711-f12374e12fbd:092aa840b3bf44eca4cfed962c25a637
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel ac828d00-bc9a-4c99-a711-f12374e12fbd
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | WARNING] Notebook filter_drop_dedupe_solutions.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 5b0d182d-ee98-484d-a03a-227b09d998f8
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 5b0d182d-ee98-484d-a03a-227b09d998f8
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe_solutions.ipynb
[NotebookApp | WARNING] Notebook filter_drop_dedupe_solutions.ipynb is not trusted
[NotebookApp | INFO] Starting buffering for 5b0d182d-ee98-484d-a03a-227b09d998f8:4bbbed8ce35349bd8ff4f9ca45270619
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | WARNING] Notebook filter_drop_dedupe_solutions.ipynb is not trusted
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 5b0d182d-ee98-484d-a03a-227b09d998f8
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Saving file at /filter_drop_dedupe.ipynb
[NotebookApp | INFO] Starting buffering for ac828d00-bc9a-4c99-a711-f12374e12fbd:d83c550f04e240abab09c6db89aa5ab9
[NotebookApp | INFO] Starting buffering for 5b0d182d-ee98-484d-a03a-227b09d998f8:d56566f94c2c484f83f68208eab3d9e9
[NotebookApp | WARNING] Notebook filter_drop_dedupe_solutions.ipynb is not trusted
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 5b0d182d-ee98-484d-a03a-227b09d998f8
[NotebookApp | INFO] Starting buffering for 5b0d182d-ee98-484d-a03a-227b09d998f8:e608bcc589f249a5832edf99c198db94
[NotebookApp | WARNING] Notebook inspect_datatypes.ipynb is not trusted
[NotebookApp | INFO] Kernel started: c7bbef0b-c7b1-477f-8732-3a76442000c0
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel c7bbef0b-c7b1-477f-8732-3a76442000c0
[NotebookApp | INFO] Saving file at /inspect_datatypes.ipynb
[NotebookApp | INFO] Saving file at /inspect_datatypes.ipynb
[NotebookApp | INFO] Saving file at /inspect_datatypes.ipynb
[NotebookApp | INFO] Starting buffering for c7bbef0b-c7b1-477f-8732-3a76442000c0:d80d28ec11ae419e85699d1586942bda
[NotebookApp | WARNING] Notebook fix_datatypes_cyl.ipynb is not trusted
[NotebookApp | INFO] Kernel started: bf0183a8-458f-49df-aa48-10405cf32bef
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel bf0183a8-458f-49df-aa48-10405cf32bef
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_cyl.ipynb
[NotebookApp | INFO] Starting buffering for bf0183a8-458f-49df-aa48-10405cf32bef:13ecfb5733d94acf8134696d35587e3d
[NotebookApp | WARNING] Notebook fix_datatypes_air_pollution.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 2175dde2-1a87-4f56-aa07-b2091c28e2de
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 2175dde2-1a87-4f56-aa07-b2091c28e2de
[NotebookApp | INFO] Saving file at /fix_datatypes_air_pollution.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_air_pollution.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_air_pollution.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_air_pollution.ipynb
[NotebookApp | INFO] Starting buffering for 2175dde2-1a87-4f56-aa07-b2091c28e2de:645aa963bb8c46999177ab8b130f0935
[NotebookApp | WARNING] Notebook fix_datatypes_mpg_greenhouse.ipynb is not trusted
[NotebookApp | INFO] Kernel started: d0932e22-bc8d-45c0-9be8-6da37817c884
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel d0932e22-bc8d-45c0-9be8-6da37817c884
[NotebookApp | INFO] Saving file at /fix_datatypes_mpg_greenhouse.ipynb
[NotebookApp | INFO] Saving file at /fix_datatypes_mpg_greenhouse.ipynb
[NotebookApp | INFO] Starting buffering for d0932e22-bc8d-45c0-9be8-6da37817c884:c2253248a7e349368215e191aa2dde1f
